--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,10 +3,10 @@ spring:
     prefix: classpath:/templates/
     suffix: .html
   datasource:
-    url: jdbc:mysql://localhost:3306/Graduated?serverTimezone=Asia/Seoul
-    username: root
-    password: 3174
-    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:postgresql://localhost:5432/test
+    username: 'root'
+    password: '3174'
+    driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
       ddl-auto: create
@@ -18,6 +18,7 @@ spring:
     #        use_sql_comments: true
     open-in-view: on
     defer-datasource-initialization: true
+    database: postgresql
 
 
 redis:
